# cherno-opengl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.old  README.md  cherno-opengl.code-workspace  template.code-workspace
res/shaders/: TestAnimatePlane.glsl  TestTexture2D.glsl  TestWaterShader.glsl  bad_shader.glsl  basic.glsl  rotation_test.glsl  square.glsl  vertex.glsl
src/: ImGuiImports.h  IndexBuffer.cpp  IndexBuffer.h  Model.cpp  Model.h  OpenGLDebugCallback.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
src/CMakeMacroHeaders/: ResoucePath.h.in  ResourcePath.h
src/res/shaders/: basic.glsl  fragment.glsl  rotation_test.glsl
src/tests/: ClearColorTest.cpp  ClearColorTest.h  Test.cpp  Test.h  TestAnimatePlane.cpp  TestAnimatePlane.h  TestTexture2D.cpp  TestTexture2D.h  TestTexture3D.cpp  TestTexture3D.h  TestWaterTexture.cpp  TestWaterTexture.h
src_no_build/: shapes.cpp  shapes.h  utils.cpp  utils.h
